[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/xml_tools/importers/map_dialog.gd" type="Script" id=1]

[node name="MapImportDialog" type="ConfirmationDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 598.0
margin/bottom = 162.0
popup/exclusive = false
window/title = "XNA Map Importer"
dialog/hide_on_ok = true
script/script = ExtResource( 1 )

[node name="container" type="GridContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 40.0
custom_constants/hseparation = 10
columns = 3

[node name="src" type="Label" parent="container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 84.0
margin/bottom = 19.0
text = "Source XML"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="src_file" type="LineEdit" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 94.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 24.0
text = "C:/Users/georg/workspace/godot/xna-rpg/original/RolePlayingGame/Content/Maps/Map001.xml"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="src_browse" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 0.0
margin/right = 558.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "browse"
flat = false

[node name="dst" type="Label" parent="container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 33.0
margin/right = 84.0
margin/bottom = 47.0
text = "Target Scene"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dst_file" type="LineEdit" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 94.0
margin/top = 28.0
margin/right = 490.0
margin/bottom = 52.0
text = "res://teste.tscn"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="dst_browse" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 28.0
margin/right = 558.0
margin/bottom = 52.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "browse"
flat = false

[node name="tilesets" type="Label" parent="container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 61.0
margin/right = 84.0
margin/bottom = 75.0
text = "TileSet folder"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tilesets_folder" type="LineEdit" parent="container"]

hint/tooltip = "Path to the folder where the TileSet resources are stored."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 56.0
margin/right = 490.0
margin/bottom = 80.0
text = "res://maps/tileset"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="tilesets_browse" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 56.0
margin/right = 558.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "browse"
flat = false

[node name="error" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 229.0
margin/bottom = 136.0
popup/exclusive = false
window/title = "Error!"
dialog/hide_on_ok = true

[connection signal="confirmed" from="." to="." method="_on_MapImportDialog_confirmed"]

[connection signal="pressed" from="container/src_browse" to="." method="_on_src_browse_pressed"]

[connection signal="pressed" from="container/dst_browse" to="." method="_on_dst_browse_pressed"]

[connection signal="pressed" from="container/tilesets_browse" to="." method="_on_tilesets_browse_pressed"]


